# spherical

./: .gitignore  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
docs/: ComparingConventions.md  ComparingMathematica.md  Conventions.md  EulerAngles.md  PolynomialsWithFactorials.md  QuaternionsAndRotations.md  SWSHs.md  WignerDDerivation.md  WignerDMatrices.md  index.md
spherical/: __init__.py  _generate_coefficients.py  mode_conversions.py  multiplication.py  swshs.py  wigner.py
spherical/SWSH/: __init__.py
spherical/SWSH_grids/: __init__.py  algebra.py  ufuncs.py  utilities.py
spherical/SWSH_modes/: __init__.py  algebra.py  derivatives.py  evaluate.py  ufuncs.py  utilities.py
spherical/WignerD/: WignerDRecursion.py  __init__.py
spherical/grid/: __init__.py  algebra.py  ufuncs.py  utilities.py
spherical/modes/: __init__.py  algebra.py  derivatives.py  evaluate.py  rotate.py  ufuncs.py  utilities.py
spherical/recursions/: __init__.py  associated_legendre_functions.py  complex_powers.py  wigner.py  wigner3j.py  wignerH.py  wignerH2.py
spherical/utilities/: indexing.py  mode_conversions.py  operators.py
tests/: conftest.py  test_SWSHs.py  test_Wigner3j.py  test_WignerD.py  test_mode_conversions.py  test_modes.py  test_multiplication.py  test_recursion.py  test_recursions.py  test_recursions_complex_powers.py  test_recursions_wignerH.py  test_spherical_functions.py  test_swshs.py  test_utilities_indexing.py  test_utilities_mode_conversions.py  test_utilities_operators.py  test_wigner.py  test_wignerD.py  test_wignerH.py  test_wignerH2.py  test_wigner_D.py  test_wigner_H.py  test_wigner_evaluate.py  test_wigner_indexing.py  test_wigner_rotate.py  test_wigner_sYlm.py  time_LM_ranges.py  time_Wigner_D_elements.py  time_Wigner_D_matrices.py
